[package]
name = "screen-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3

[dependencies]
tokio = { version = "1", features = ["full", "io-util"] }
image = "0.24.1"
clap = { version = "4.5.4", features = ["derive"] }
windows-capture = "1.1.7"
ggez = "0.9.3"
once_cell = "1.19.0"
turbojpeg = "1.1.0"
