[package]
name = "screen-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3

[dependencies]
image = "0.24.1"
clap = { version = "4.5.4", features = ["derive"] }
ggez = "0.9.3"
scrap = "0.5.0"
ravif = "0.11.5"
rgb = "0.8.37"
turbojpeg = {version="1.1.0", features = ["image"]}
