[package]
name = "screen-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug=true

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
ggez = "0.9.3"
turbojpeg = {version="1.1.0", features = ["image"]}
captrs = "0.3.1"
bytes = "1.6.0"

